# railreader2

./: .gitignore  CLAUDE.md  Cargo.toml  DISTRIBUTION.md  HANDOFF.md  LICENSE  NuGet.config  README.md  RailReader2-full.slnx  RailReader2.slnx
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
RailReader2/: RailReader2.slnx
assets/: railreader2.desktop  railreader2.metainfo.xml
docs/: about.html  agent-playbook.md  guide.html  heron-layout-model.md  index.html  native-annotations-adoption.md  portals-design.md  pp-doclayout-s.md  privacy.html  robots.txt  semi-auto-scroll-design.md  sitemap.xml  style.css  stylus-support.md  system.css  user-guide.md  vllm-guide.md
docs/demo-dsl/: DESIGN.md
examples/: dump_layout.rs
experiments/: layout-model-plan.md
experiments/data-prep/: README.md  (+7 more)
experiments/layout-detector/: .gitignore  ENHANCEMENTS.md  HANDOFF_v6.md  V5_LAUNCH.md  eval_ap.py  export_onnx.py  pyproject.toml  train.py
experiments/layout-detector/layout_detector/: __init__.py  dataset.py  decode.py  loss.py  model.py
experiments/layout-detector/runs/v4/: eval.json
experiments/layout-detector/runs/v5b/: eval.json
experiments/layout-detector/runs/v7/: eval.json
experiments/order-validation/: .gitignore  README.md  compare.py  pyproject.toml  render_v2_vs_v4.py  render_v4_vs_v5b.py  render_v5b_vs_v6.py  render_v6_vs_v7.py  teacher.py  tiny_layout.py  visualise.py  xy_cut.py  yolo.py
installer/: railreader2.iss
marketing/: linkedin-launch-post.md  podcast-pitch-email.md  promotion-plan.md
msix/: Package.appxmanifest  build-msix.ps1
scripts/: atspi-dump.py  download-model.sh
src/: cleanup.rs  colour_effect.rs  config.rs  egui_integration.rs  fonts.rs  images.rs  interpreter.rs  layout.rs  lib.rs  main.rs  rail.rs  tab.rs  worker.rs
(+372 files in other folders)
