[package]
name = "railreader2"
version = "0.1.0"
edition = "2021"

[dependencies]
skia-safe = { version = "0.93", features = ["gl", "svg"] }
glutin = "0.32"
glutin-winit = "0.5"
gl = "0.14"
raw-window-handle = "0.6"
winit = "0.30"
mupdf = "0.6"
ort = "2.0.0-rc.11"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
