[package]
name = "railreader2"
version = "1.0.0"
edition = "2021"

[dependencies]
skia-safe = { version = "0.93", features = ["gl", "svg"] }
glutin = "0.32"
glutin-winit = "0.5"
gl = "0.14"
raw-window-handle = "0.6"
winit = "0.30"
mupdf = "0.6"
ort = "2.0.0-rc.11"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
egui = "0.31"
egui-winit = "0.31"
egui_glow = "0.31"
glow = "0.16"
rfd = "0.15"
