[project]
name = "layout-detector"
version = "0.1.0"
description = "Tiny anchor-free YOLO-style detector for document layout. Apache/MIT-licence-clean (own code + torchvision)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "pillow>=10",
    "numpy>=1.26",
    "tqdm>=4.66",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "pyyaml>=6",
]

[tool.uv]
package = false
